sensord (0.6.40) unstable; urgency=low

  [Antti Virtanen]
  * SensorManager::releaseSensor() now removes bufferSize and bufferInterval settings for session from the node.
  * Qt-api interface classes now directly access methods from dbus adaptor instead of using properties. Fixes: NB#181522.
  * Refactored sensor interface and adaptor classes.

  [Shenghua Liu]
  * Code cleanup 

 -- shenghua <ext-shenghua.1.liu@nokia.com>  Fri, 25 Feb 2011 10:50:28 +0200

sensord (0.6.39) unstable; urgency=low

  [Pia Niemela]
  * Added setDataRangeIndex utility for easier range swapping
  * Fixed MOBILITY-2535
  * Fixed NB#223439

  [Lihan Guo]
  * Fixed coverity defects.
  * Improved sensorfw examples
  * Renamed DbusEmitter to DataEmitter and DbusEmitter::emitToDbus to DataEmitter::emitData.
  * Added test application to create multiple sensors.

  [Timo Rongas]
  * Prevent reading values from empty list in SysfsAdaptor
  * Added nodocs parameter to prevent doc building. Fixes: NB#227047
  * Chaged Screen.TopEdge default state from "top" to "left"

  [Antti Virtanen]
  * Fixed bug from SysfsAdaptor::writeToFile(): it used wrong method to get size of the buffer.
  * Removed FilterProperty: it had possible memory leak and could return references to already deleted memory.
  * AccelerometerChain transformation matrix is now instance specific.
  * Changed buffersizes to 1.
  * Removed ugly optimization from RingBuffer.
  * Merged back pipe to SensorManager to delegate socket writing to Qt eventloop thread. Fixes: NB#227398, NB#227034, NB#229068.
  * Since SocketHandler is used only by Qt eventloop unnecessary mutexes are removed.

 -- Antti Virtanen <antti.i.virtanen@nokia.com>  Wed, 23 Feb 2011 11:40:32 +0200

sensord (0.6.38) unstable; urgency=low

  [Shenghua Liu]
  * Orientation rotation improvement. Fixes: NB#223261
  * Fixes: NB#223772

 -- shenghua <ext-shenghua.1.liu@nokia.com>  Thu, 03 Feb 2011 11:17:28 +0200

sensord (0.6.37) unstable; urgency=low

  [Antti Virtanen]