@@ -31,9 +31,8 @@
 
 const char* GyroscopeSensorChannelInterface::staticInterfaceName = "local.GyroscopeSensor";
 
-QDBusAbstractInterface* GyroscopeSensorChannelInterface::factoryMethod(const QString& id, int sessionId)
+AbstractSensorChannelInterface* GyroscopeSensorChannelInterface::factoryMethod(const QString& id, int sessionId)
 {
-    // ToDo: see which arguments can be made explicit
     return new GyroscopeSensorChannelInterface(OBJECT_PATH + "/" + id, sessionId);
 }
 
@@ -89,7 +88,7 @@ void GyroscopeSensorChannelInterface::connectNotify(const char* signal)
 {
     if(QLatin1String(signal) == SIGNAL(frameAvailable(QVector<XYZ>)))
         frameAvailableConnected = true;
-    QDBusAbstractInterface::connectNotify(signal);
+    dbusConnectNotify(signal);
 }
 
 QDBusReply<void> GyroscopeSensorChannelInterface::reset()
