@@ -30,9 +30,8 @@
 
 const char* MagnetometerSensorChannelInterface::staticInterfaceName = "local.MagnetometerSensor";
 
-QDBusAbstractInterface* MagnetometerSensorChannelInterface::factoryMethod(const QString& id, int sessionId)
+AbstractSensorChannelInterface* MagnetometerSensorChannelInterface::factoryMethod(const QString& id, int sessionId)
 {
-    // ToDo: see which arguments can be made explicit
     return new MagnetometerSensorChannelInterface(OBJECT_PATH + "/" + id, sessionId);
 }
 
@@ -88,7 +87,7 @@ void MagnetometerSensorChannelInterface::connectNotify(const char* signal)
 {
     if(QLatin1String(signal) == SIGNAL(frameAvailable(QVector<MagneticField>)))
         frameAvailableConnected = true;
-    QDBusAbstractInterface::connectNotify(signal);
+    dbusConnectNotify(signal);
 }
 
 QDBusReply<void> MagnetometerSensorChannelInterface::reset()
